appId: app.axross.juicio
---
- launchApp
- assertVisible:
    id: 'title'
    childOf:
      id: 'analyze-nav-bar'
    text: 'Analyze'

- tapOn:
    id: 'tab-bar-item-history'
- assertVisible:
    id: 'title'
    childOf:
      id: 'history-nav-bar'
    text: 'History'
- assertVisible:
    id: 'tab-bar-item-history'
    selected: true
- assertVisible:
    id: 'history-empty-state'

- tapOn:
    id: 'tab-bar-item-presets'
- assertVisible:
    id: 'title'
    childOf:
      id: 'presets-nav-bar'
    text: 'Hand Range Preset'
- assertVisible:
    id: 'tab-bar-item-presets'
    selected: true
- assertVisible:
    id: 'presets-empty-state'

- tapOn:
    id: 'tab-bar-item-settings'
- assertVisible:
    id: 'title'
    childOf:
      id: 'settings-nav-bar'
    text: 'Settings'
- assertVisible:
    id: 'tab-bar-item-settings'
    selected: true
- assertVisible:
    id: 'settings-language-section'
- assertVisible:
    id: 'settings-theme-section'
- assertVisible:
    id: 'settings-about-section'
- assertVisible:
    id: 'settings-technical-info'

- tapOn:
    id: 'tab-bar-item-analyze'
- assertVisible:
    id: 'title'
    childOf:
      id: 'analyze-nav-bar'
    text: 'Analyze'
- assertVisible:
    id: 'tab-bar-item-analyze'
    selected: true
- assertVisible:
    id: 'analyze-empty-state'
