appId: app.axross.juicio
---
- launchApp
- tapOn:
    id: 'tab-bar-item-settings'
- assertVisible:
    id: 'settings-about-section'

- tapOn:
    id: 'settings-about-feedback'
- assertVisible:
    id: 'title'
    childOf:
      id: 'feedback-nav-bar'
    text: 'Feedback'

- tapOn:
    id: 'back'
    childOf:
      id: 'feedback-nav-bar'
- assertVisible:
    id: 'title'
    childOf:
      id: 'settings-nav-bar'
    text: 'Settings'
