appId: app.axross.juicio
---
- launchApp
- tapOn:
    id: 'tab-bar-item-settings'
- assertVisible:
    id: 'settings-theme-row'

- tapOn:
    id: 'settings-theme-row'
- assertVisible:
    id: 'title'
    childOf:
      id: 'settings-theme-nav-bar'
    text: 'Theme'

- tapOn:
    id: 'settings-theme-light'
- assertVisible:
    id: 'settings-theme-light'
    checked: true
